# PIAIC

./: README.md
Class 01 (16 JULY 2023)/: Class Questions.txt
Class 01 (16 JULY 2023)/First program/: app.ts  index.html
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 05/: index.js
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 06/: index.js
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 09/: index.js  index.ts
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 11/: index.js
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 12/: index.ts
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 13/: index.js
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 14/: index.js
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 15/: index.js  index.ts
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 16/: index.js
Class 01 (16 JULY 2023)/Week 01 (16 JULY 2023) Assignment/Q 17/: index.ts
Class-01-16-JULY-2023/First program/: app.js  index.ts
Class-02-23-JULY-2023/: package.json
Class-02-23-JULY-2023/Assignment/: index.js  index.ts
Class-03-30-JULY-2023-online/: Class Slides & Recording.txt
Class-04-05-AUGUST-2023/assignment/: assignment_questions.txt
Class-04-05-AUGUST-2023/assignment/q_1/: index.js  index.ts
Class-04-05-AUGUST-2023/class-tasks/: Class_tasks_list.txt
Class-05-10-AUGUST-2023-online/: lecture_link.txt
Class-06-12-AUGUST-2023/assignment/: tasks.txt
Class-07-16-AUGUST-2023-online-git/: git_command.txt  video_lecture_link.txt
Class-09-26-AUGUST-2023/assignment/: tasks.txt
Class-09-26-AUGUST-2023/class_tasks/: class_tasks.txt
Class-10-02-SEPTEMBER-2023/class_tasks/: tasks.txt
Class-12-17-SEPTEMBER-2023/assignment/: tasks.txt
Class-12-24-SEPTEMBER-2023/assignment/: tasks.txt
Class-13-08-OCTOBER-2023/class_tasks/: npm deployment link.txt
Class-14-12-OCTOBER-2023-online/: OOP Concept URL.txt
Projects/projecct00_calculator/: calculator.js  index.js  index.ts  package-lock.json  package.json
Quater2/Class-01-05-NOVEMBER-2023/: road map.txt
Quater2/portfolio/: package-lock.json  package.json
Quater3/Class-01-24-MARCH-2024/assignment/: pyproject.toml
Quater3/Class-01-24-MARCH-2024/assignment/student_app/: main.py
Quater3/Class-04-31-MARCH-2024/class_task/: pyproject.toml
Quater3/Class-05-21-APRIL-2024/class-task/fastapi-with-docker/: Dockerfile.dev  pyproject.toml
Quater3/Class-06-28-APRIL-2024/assignment/: pyproject.toml
Quater3/Class-06-28-APRIL-2024/assignment/assignment/: main.py
Quater3/Class-07-05-MAY-2024/class-task/: pyproject.toml
Quater3/Class-07-05-MAY-2024/class-task/class_task/: main.py
Quater3/Class-07-05-MAY-2024/class-task/class_task/models/: todos.py
Quater3/docker-compose-and-dev-container/: Dockerfile.dev  compose.yaml  pyproject.toml
Quater3/docker-compose-and-dev-container/docker_compose_and_dev_container/: main.py
Quater3/docker-dev-container/: Dockerfile.dev  pyproject.toml
Quater3/docker-dev-container/docker_dev_container/: main.py
Quater3/fast-api-with-docker/: Dockerfile.dev
Quater3/mart-api/: Dockerfile  docker-compose.yml  pyproject.toml
Quater3/mart-api/app/: main.py
Quater3/mart-api/app/core/: config.py  db.py
Quater3/mart-api/app/services/: inventory_service.py  notification_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
Quater3/mart-api/migrations/: env.py
Quater3/online-imtiaz-mart-api/: docker-compose.yml  pyproject.toml
Quater3/pre-requisite/: road map.txt
Quater4/: poetry package list.txt
Quater4/Class-03-11-AUGUST-2024-langchain-intro/: pyproject.toml  resources.txt
Quater4/Class-03-11-AUGUST-2024-langchain-intro/class_03_11_august_2024_langchain_intro/: main.py
Quater4/Class-04-18-AUGUST-2024-hugging-face-model/: pyproject.toml
Quater4/Class-04-18-AUGUST-2024-hugging-face-model/class_04_18_august_2024_hugging_face_model/: main.py
Quater4/Class-05-25-AUGUST-2024-gemni-and-first-rag-app/: .env  pyproject.toml
Quater4/Class-05-25-AUGUST-2024-gemni-and-first-rag-app/class_05_25_august_2024_gemni_and_first_rag_app/: data.txt  gemeni_rag.py  llm_gemini.py
Quater4/Class-06-15-SEPTEMBER-2024-langchain-runable-and-agent/: pyproject.toml
Quater4/Class-06-15-SEPTEMBER-2024-langchain-runable-and-agent/class_06_15_september_2024_langchain_runable_and_agent/: langchain_agent.py  langchain_get_current_weather.py  langchain_tool_and_runnable.py
Quater4/Class-07-22-SEPTEMBER-2024-langchain-complete-app-rag-agent/: pyproject.toml
Quater4/Class-07-22-SEPTEMBER-2024-langchain-complete-app-rag-agent/class_07_22_september_2024_langchain_complete_app_rag_agent/: main.py
Quater4/Hope-To-Skills/class_9_image_generation_and_hugging_face_transformers/: README.md  class_9_image_generation_and_hugging_face_transformers.ipynb  pyproject.toml
Quater4/Hope-To-Skills/class_9_image_generation_and_hugging_face_transformers/class_9_image_generation_and_hugging_face_transformers/: image_generation.py  main_transformers.py
Quater4/Project Ideas/: Project ideas list.txt  ecommerce.md  health record.md  hospital resources.md
Quater4/mart/: Dockerfile  compose.yaml
Quater5/01-lang-graph/: .env  pyproject.toml
Quater5/01-lang-graph/lang_graph/: main.py
Quater5/01-lang-graph/lang_graph/crud/: crud.py
Quater5/01-lang-graph/lang_graph/db/: database.py
Quater5/01-lang-graph/lang_graph/llm/: llm.py
Quater5/01-lang-graph/lang_graph/model/: model.py
Quater5/01-lang-graph/lang_graph/routes/: routes.py
Quater5/01-lang-graph/lang_graph/schema/: schema.py
Quater5/02-prompt-engineering/: pyproject.toml
Quater5/02-prompt-engineering/02_prompt_engineering/llm_basic/: 01_gemeni_llm.py  02_gemeni_llm_stream.py
Quater5/02-prompt-engineering/02_prompt_engineering/llm_settings/: llm_max_tokens.py  llm_temperature.py  llm_top_p.py
Quater5/02-prompt-engineering/02_prompt_engineering/prompting_techniques/: chain_of_thought.md  chain_of_thought.py  few_shot.md  few_shot.py  zero_shot.py
my-quivr/: package-lock.json  package.json
(+415 files in other folders)
