[tool.poetry]
name = "mart-api"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid <muhammadjunaid7015140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.19"
python-dotenv = "^1.0.1"
mypy = "^1.10.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "1.7.7"
requests = "2.27.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
black = "21.12b0"
flake8 = "4.0.1"
isort = "5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
