[tool.poetry]
name = "class-03-11-august-2024-langchain-intro"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid <muhammadjunaid7015140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.13"
langchain-core = "^0.2.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
