[tool.poetry]
name = "lang_graph"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid <muhammadjunaid7015140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlmodel = "^0.0.22"
python-dotenv = "^1.0.1"
mypy = "^1.13.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
langchain-core = "^0.3.22"
langgraph = "^0.2.56"
langchain-google-genai = "^2.0.6"
python-multipart = "^0.0.19"
langchain = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
